--- a/src/scss/common.scss
+++ b/src/scss/common.scss
@@ -7,7 +7,7 @@
 @import "compass";
 
 @import "var/settings";
-// @import "var/sprite";
+@import "var/sprite";
 @import "base/all";
 @import "functions/all";
 @import "layout/all";
