--- a/src/scss/var/_sprite.scss
+++ b/src/scss/var/_sprite.scss
@@ -8,36 +8,36 @@ SCSS variables are information about icon's compiled state, stored under its ori
 The large array-like variables contain all information about a single icon
 $icon-home: x y offset_x offset_y width height total_width total_height image_path;
 */
-$sprite-sprite1-x: 100px;
-$sprite-sprite1-y: 0px;
-$sprite-sprite1-offset-x: -100px;
-$sprite-sprite1-offset-y: 0px;
-$sprite-sprite1-width: 50px;
-$sprite-sprite1-height: 50px;
-$sprite-sprite1-total-width: 150px;
-$sprite-sprite1-total-height: 200px;
-$sprite-sprite1-image: '../img/sprite.png';
-$sprite-sprite1: 100px 0px -100px 0px 50px 50px 150px 200px '../img/sprite.png';
-$sprite-sprite2-x: 100px;
-$sprite-sprite2-y: 50px;
-$sprite-sprite2-offset-x: -100px;
-$sprite-sprite2-offset-y: -50px;
-$sprite-sprite2-width: 50px;
-$sprite-sprite2-height: 50px;
-$sprite-sprite2-total-width: 150px;
-$sprite-sprite2-total-height: 200px;
-$sprite-sprite2-image: '../img/sprite.png';
-$sprite-sprite2: 100px 50px -100px -50px 50px 50px 150px 200px '../img/sprite.png';
-$sprite-sprite3-x: 0px;
-$sprite-sprite3-y: 0px;
-$sprite-sprite3-offset-x: 0px;
-$sprite-sprite3-offset-y: 0px;
-$sprite-sprite3-width: 100px;
-$sprite-sprite3-height: 200px;
-$sprite-sprite3-total-width: 150px;
-$sprite-sprite3-total-height: 200px;
-$sprite-sprite3-image: '../img/sprite.png';
-$sprite-sprite3: 0px 0px 0px 0px 100px 200px 150px 200px '../img/sprite.png';
+$sprite1-x: 100px;
+$sprite1-y: 0px;
+$sprite1-offset-x: -100px;
+$sprite1-offset-y: 0px;
+$sprite1-width: 50px;
+$sprite1-height: 50px;
+$sprite1-total-width: 150px;
+$sprite1-total-height: 200px;
+$sprite1-image: '../img/sprite.png';
+$sprite1: 100px 0px -100px 0px 50px 50px 150px 200px '../img/sprite.png';
+$sprite2-x: 100px;
+$sprite2-y: 50px;
+$sprite2-offset-x: -100px;
+$sprite2-offset-y: -50px;
+$sprite2-width: 50px;
+$sprite2-height: 50px;
+$sprite2-total-width: 150px;
+$sprite2-total-height: 200px;
+$sprite2-image: '../img/sprite.png';
+$sprite2: 100px 50px -100px -50px 50px 50px 150px 200px '../img/sprite.png';
+$sprite3-x: 0px;
+$sprite3-y: 0px;
+$sprite3-offset-x: 0px;
+$sprite3-offset-y: 0px;
+$sprite3-width: 100px;
+$sprite3-height: 200px;
+$sprite3-total-width: 150px;
+$sprite3-total-height: 200px;
+$sprite3-image: '../img/sprite.png';
+$sprite3: 0px 0px 0px 0px 100px 200px 150px 200px '../img/sprite.png';
 
 /*
 The provided mixins are intended to be used with the array-like variables
